# Comet

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  COPYING  MANIFEST.in  README.rst  TODO.rst  broker.py  comet.bib  comet.tex  config.py  remotes.cfg  requirements.txt  requirements2.txt  sender.py  setup.cfg  setup.py  subscriber.py
.github/workflows/: ci.yaml
benchmark/: Dockerfile  benchmark.py  latency.py
benchmark/latency/: README.rst  latency_histogram.py
benchmark/multi_client/: read_times.py
benchmark/throughput/: README.rst
benchmarks/: benchmark.py  gpg_bench.py  latency.py
benchmarks/latency/: latency_histogram.py
benchmarks/multi_client/: README.rst  generate_plot.py  generate_ploy.py  overall.json  read_times.py
benchmarks/throughput/: README.rst  rate.data  rate_histogram.py  throughput_aggegate.py  throughput_plot.py  time.data
broker/: broker.py  ivorn_db.py  relay.py
cmake/: FindLatexMk.cmake  FindPygments.cmake
comet/: __init__.py  constants.py  icomet.py  testutils.py
comet/broker/: broker.py  relay.py
comet/cmdline/: __init__.py  options.py
comet/cmdline/test/: test_options.py
comet/config/: options.py
comet/handler/: __init__.py  record.py  relay.py  spawn.py
comet/handler/test/: test_relay.py  test_spawn.py  test_spawn_output.sh  test_spawn_stdout.sh
comet/log/: __init__.py  log.py
comet/log/test/: test_log.py
comet/plugins/: __init__.py  eventprinter.py  eventwriter.py
comet/plugins/test/: test_eventprinter.py  test_eventwriter.py
comet/protocol/: __init__.py  base.py  broadcaster.py  messages.py  receiver.py  sender.py  subscriber.py
comet/protocol/test/: test_base.py  test_elementsender.py  test_eventhandler.py  test_messages.py  test_voeventbroadcaster.py  test_voeventreceiver.py  test_voeventsender.py  test_voeventsubscriber.py
comet/schema/: VOEvent-v2.0.xsd  transport-0.1.xsd  transport-1.1.xsd  transport-2.0.xsd
comet/service/: __init__.py  broadcaster.py  broker.py  receiver.py  subscriber.py
comet/service/test/: test_broadcaster.py  test_broker.py  test_receiver.py  test_subscriber.py
comet/tcp/: messages.py  protocol.py
comet/tcp/test/: test_elementsender.py  test_eventhandler.py  test_messages.py  test_protocol.py  test_voeventbroadcaster.py  test_voeventreceiver.py  test_voeventsender.py  test_voeventsubscriber.py
comet/test/: comet.public.asc  comet.revoke.asc  comet.secret.asc  gpg.py  support.py
comet/utility/: __init__.py  auth.py  broadcaster_whitelist.py  endpoint.py  event_db.py  exceptions.py  ivorn_db.py  log.py  options.py  relay.py  schemavalidator.py  signature.py  spawn.py  validators.py  voevent.py  whitelist.py  xml.py
comet/utility/test/: test_auth.py  test_endpoint.py  test_event_db.py  test_ivorn_db.py  test_log.py  test_options.py  test_schemavalidator.py  test_signature.py  test_spawn.py  test_spawn.sh  test_voevent.py  test_whitelist.py  test_xml.py
comet/validator/: __init__.py  ivoid.py  ivorn.py  previously_seen.py  schema.py  signature.py
comet/validator/test/: test_ivoid.py  test_ivorn.py  test_previously_seen.py  test_schema.py  test_signature.py
comet/voevent/: voevent.py
docs/: Makefile  VOEvent-OpenPGP.rst  authentication.rst  conf.py  credits.rst  filtering.rst  handlers.rst  history.rst  index.rst  installation.rst
docs/appendix/: VOEvent-OpenPGP.rst  history.rst  index.rst  release.rst
docs/usage/: broker.rst  index.rst  publisher.rst
examples/: README.rst  comet  comet.sh
figures/: README.rst  latency.json  latency.py  latency_aggregate.py  latency_plot.py  multisubscriber.json  multisubscriber.py  multisubscriber_aggregate.py  multisubscriber_plot.py  tcp.graffle  throughput.json  throughput.py  throughput_aggegate.py  throughput_plot.py  utils.py  vtp.graffle
manuscript/: comet.bib  comet.tex  deferToThread.py  deferred.py  event.py  plugin.py  testmessage.xml  xpath1.xml  xpath2.xml  xpath3.xml  xpath4.xml
schema/: VOEvent-v2.0.xsd  transport-1.1.xsd
scripts/: Dockerfile  archive_voe_to_file.py  comet-sendbulk  comet-sendvo  eventdb-bench.py  gpg-bench.py  invoke-comet.sh  latency.py  send_voevent  xml-bench.py
tcp/: messages.py  protocol.py  transport.py  utils.py
twisted/plugins/: broker_plugin.py  comet_plugin.py  subscriber_plugin.py
voevent/: voevent.py
